<resources>
  <string name="app_name">TracePinas</string>

  <string name="hint_click_on_a_country_for_more_information">Hint: Click on a country for more
        statistics information</string>

  <string name="countries_affected">COUNTRIES AFFECTED</string>
  <string name="default_country">Philippines</string>
  <string name="dummy_continent">ASIA</string>

  <string name="worldwide_cases">Worldwide</string>
  <string name="live_overview">Live Overview</string>

  <string name="statistics">Statistics</string>
  <string name="news">News</string>
  <string name="map">Map</string>
  <string name="help">Help</string>
  <string name="facilities">Facilities</string>
  <string name="layout_binding_npe">Layout Binding must be instantiated from\u0020</string>
  <string name="deaths_cases">Deaths</string>
  <string name="confirmed_cases">Confirmed</string>
  <string name="recovered_cases">Recovered</string>
  <string name="Home">Home</string>
  <string name="Current">Live</string>
  <string name="World">Worldwide</string>
  <string name="FAQ">News</string>
  <string name="About">Map</string>

  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>

  <string name="number_format">%,.2f </string>
  <string name="last_updated">Last updated:</string>
  <string name="updates">Feed</string>

  <string name="last_update_my">Last update %s</string>

  <!-- LIVE DATA FRAGMENT STRINGS -->
  <string name="report_covid">Report your COVID-19 health status.</string>
  <string name="total_cases">Total Cases</string>
  <string name="corona_virus_global">Global Overview</string>
  <string name="report_your_status">Take 3 minutes every day, to report your health status and help us map the spread of coronavirus to prevail faster.</string>
  <string name="live">LIVE</string>
  <string name="corona_philippines">Philippines</string>
  <string name="new_case">New: +</string>
  <string name="cases">new cases </string>
  <string name="most_affected">Most Affected Country</string>
  <string name="list_row_text">960896 total cases and 54265 deaths in</string>
  <string name="last_update">Last updated: </string>
  <string name="current_state">New: +</string>

  <!-- GLOBAL FRAGMENT STRINGS -->
  <string name="deaths">Deaths:</string>
  <string name="confirmed">Confirmed:</string>
  <string name="recovered">Recovered:</string>

  <string name="new_cases">+(%s)</string>
  <string name="new_recoveries">+%s \nnew recoveries</string>
  <string name="new_deaths">+%s \nnew deaths</string>

  <string name="twitter_at">\@%s</string>
  <string name="zero_cases">+0 \nnew cases</string>
  <string name="zero_recoveries">+0 \nnew recoveries</string>
  <string name="zero_deaths">+0 \nnew deaths</string>
  <string name="button">button</string>
  <string name="search_country">Search Country</string>
  <string name="cases_text">New %1s cases and %2s deaths, whopping to %3s confirmed cases as of today.</string>
  <string name="updating">Updating data from server…</string>
  <string name="default_tag">Null</string>

  <string name="sources">Sources: WHO, CDC, ECDC, NHC, of the PRC, JHU CSSE, DXY, QQ, and various international media.</string>
  <string name="date_format">%1$ta, %1$tB %1$td %1$tT %1$tY</string>
  <string name="no_internet_connection">No Internet Connection</string>
  <string name="affected_areas">Infected Areas</string>
  <string name="currently_displayed">Currently Displayed</string>
  <string name="TOTAL">Total Infected: %1s</string>
  <string name="DEFAULT">Philippines</string>
  <string name="TWITTER_BEARER_TOKEN">AAAAAAAAAAAAAAAAAAAAAA5SDwEAAAAAnF1q</string>

  <string name="new_cases_total">\u0020new cases with the total of\u0020</string>
  <string name="no_new_cases">\u0020total confirmed cases as of today</string>
  <string name="confirmed_today">\u0020confirmed cases as of today</string>
  <string name="custom_spinner_text">Philippines</string>
  <string name="change">change</string>
  <string name="select_country">Select Country</string>

  <string name="check_connection">Please check your internet connection</string>
  <string name="twitter_url">https://twitter.com/</string>
  <string name="package_name">com.twitter.android</string>
  <string name="twitter_app_message">No Twitter app installed in this device: </string>
  <string name="plus_cases">+%1s</string>
  <string name="NOT_CONNECTED">Failed to set network request. Please try again when connection improves.</string>

  <string name="collapse">Collapse</string>
  <string name="view_all">View All</string>
  <string name="confirmed_cases_text">%s Confirmed Cases</string>

  <!--
  URL
  -->

</resources>
