<!--
  ~ Created by Force Porquillo on 5/15/20 9:23 PM
  ~ Copyright (c) 2020.  All rights reserved.
  ~ Last modified 5/3/20 12:46 AM
  ~
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/tab_home"
        android:icon="@drawable/ic_home"
        android:title="@string/Home" />
    <item
        android:id="@+id/tab_corona"
        android:icon="@drawable/ic_virus"
        android:title="@string/Current" />
    <item
        android:id="@+id/tab_global"
        android:icon="@drawable/ic_earth"
        android:title="@string/World" />
    <item
        android:id="@+id/tab_news"
        android:icon="@drawable/ic_communication"
        android:title="@string/updates" />

    <item
        android:id="@+id/tab_map"
        android:icon="@drawable/ic_feed"
        android:title="@string/About" />
</menu>