<?xml version="1.0" encoding="utf-8"?><!--
  ~ Created by Force Porquillo on 5/29/20 11:26 PM
  ~ Copyright (c) 2020.  All rights reserved.
  ~ Last modified 5/29/20 11:26 PM
  ~
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/overview_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/foregroundColor2"
    android:elevation="2dp">

    <RelativeLayout
        android:id="@+id/countries_affected_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/blue_border"
            android:layout_width="7dp"
            android:layout_height="35dp"
            android:layout_marginStart="5dp"
            android:background="@color/blue" />

        <TextView
            android:id="@+id/countries_affected"
            style="@style/affected_sources"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/blue_border"
            android:text="@string/countries_affected"
            android:textColor="@color/blue" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/countries_affected_container"
        android:layout_marginBottom="0dp"
        android:elevation="1dp">

        <TextView
            android:id="@+id/source_text"
            style="@style/sources"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="15dp"
            android:text="@string/sources" />

        <View
            android:id="@+id/info_icon"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_below="@id/source_text"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="5dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/ic_info" />

        <TextView
            style="@style/sources"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/source_text"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/margin_2dp"
            android:layout_toEndOf="@id/info_icon"
            android:text="@string/hint_click_on_a_country_for_more_information"
            android:textColor="@color/blue" />
    </RelativeLayout>
</RelativeLayout>
