<?xml version="1.0" encoding="utf-8"?><!--
  ~ Created by Force Porquillo on 6/14/20 1:57 PM
  ~ Copyright (c) 2020.  All rights reserved.
  ~ FEU Institute of Technology
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/overview_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/foregroundColor2"
    android:elevation="2dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/search_container"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="@dimen/margin_5dp"
        android:layout_marginEnd="@dimen/_10dp"
        android:layout_marginBottom="5dp"
        app:cardBackgroundColor="@color/search_color"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp">

        <androidx.appcompat.widget.SearchView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@color/search_color"
            android:contextClickable="true"
            android:gravity="center"
            android:layoutDirection="ltr"
            android:textAlignment="center"
            android:theme="@style/white_cursor_searchView"
            app:queryBackground="@android:color/transparent"
            tools:targetApi="m" />

        <TextView
            android:id="@+id/search_hint_text"
            style="@style/search_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="40dp"
            android:layout_marginTop="@dimen/margin_1dp"
            android:text="@string/search_country" />
    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:id="@+id/countries_affected_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/search_container">

        <RelativeLayout
            android:id="@+id/blue_border"
            android:layout_width="7dp"
            android:layout_height="35dp"
            android:layout_marginStart="5dp"
            android:background="@color/blue" />

        <TextView
            android:id="@+id/countries_affected"
            style="@style/affected_sources"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/blue_border"
            android:text="@string/countries_affected"
            android:textColor="@color/blue" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/countries_affected_container"
        android:elevation="1dp">

        <TextView
            android:id="@+id/source_text"
            style="@style/sources"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="15dp"
            android:text="@string/sources" />

        <View
            android:id="@+id/info_icon"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_below="@id/source_text"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="5dp"
            android:layout_marginTop="3dp"
            android:background="@drawable/ic_info" />

        <TextView
            style="@style/sources"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/source_text"
            android:layout_margin="2dp"
            android:layout_toEndOf="@id/info_icon"
            android:gravity="center_vertical"
            android:text="@string/hint_click_on_a_country_for_more_information"
            android:textColor="@color/blue" />

    </RelativeLayout>
</RelativeLayout>