<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Created by Force Porquillo on 6/15/20 10:30 PM
  ~ FEU Institute of Technology
  ~ Copyright (c) 2020.  All rights reserved.
  ~ Last modified 6/17/20 04:00 AM
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:id="@id/container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/foregroundColor2"
        android:elevation="8dp">

        <RelativeLayout
            android:id="@+id/worldwide_container"
            android:layout_width="wrap_content"
            android:layout_height="?attr/actionBarSize"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/update"
                style="@style/time_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/worldwide"
                android:layout_marginStart="15dp"
                android:text="Tue, June 17, 2020 4:32:27" />

            <TextView
                android:id="@+id/worldwide"
                style="@style/fragment_title"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="15dp"
                android:text="@string/worldwide_cases" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/favorites_button"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/margin_15dp"
                android:backgroundTint="#D3D3D3"
                android:clickable="true"
                android:focusable="true"
                android:padding="6dp"
                android:src="@drawable/icon_heart"
                app:borderWidth="0dp"
                app:elevation="0dp"
                app:fabCustomSize="32dp"
                app:fabSize="normal"
                app:pressedTranslationZ="12dp"
                app:rippleColor="@color/search_color">

            </com.google.android.material.floatingactionbutton.FloatingActionButton>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/custom_widget_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/worldwide_container"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                style="@style/text_cases_titles"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@color/grayScale"
                android:gravity="center"
                android:text="@string/no_internet_connection"
                android:textColor="@color/white" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/overview_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/custom_widget_container"
            android:background="@color/foregroundColor2">

            <androidx.cardview.widget.CardView
                android:id="@+id/search_container"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="@dimen/margin_5dp"
                android:layout_marginEnd="@dimen/_10dp"
                android:layout_marginBottom="@dimen/margin_10dp"
                app:cardBackgroundColor="@color/search_color"
                app:cardCornerRadius="10dp"
                app:cardElevation="0dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.SearchView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentStart="true"
                        android:layout_gravity="center"
                        android:background="@color/search_color"
                        android:contextClickable="true"
                        android:gravity="center"
                        android:layoutDirection="ltr"
                        android:overScrollMode="always"
                        android:textAlignment="center"
                        android:theme="@style/white_cursor_searchView"
                        app:iconifiedByDefault="false"
                        app:queryBackground="@android:color/transparent"
                        app:queryHint="Search Country"
                        tools:targetApi="m" />
                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <RelativeLayout
                android:id="@+id/countries_affected_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/search_container">

                <ImageView
                    android:id="@id/blue_border"
                    android:layout_width="7dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="@dimen/margin_5dp"
                    android:background="@color/blue" />

                <TextView
                    android:id="@+id/countries_affected"
                    style="@style/affected_sources"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@id/blue_border"
                    android:text="@string/countries_affected"
                    android:textColor="@color/blue" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/countries_affected_container"
                android:elevation="8dp">

                <TextView
                    android:id="@+id/source_text"
                    style="@style/sources"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="15dp"
                    android:text="@string/sources" />

                <View
                    android:id="@+id/info_icon"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_below="@id/source_text"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="3dp"
                    android:background="@drawable/ic_info" />

                <TextView
                    style="@style/sources"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/source_text"
                    android:layout_margin="2dp"
                    android:layout_toEndOf="@id/info_icon"
                    android:gravity="center_vertical"
                    android:text="@string/hint_click_on_a_country_for_more_information"
                    android:textColor="@color/blue" />
            </RelativeLayout>
        </RelativeLayout>

        <View
            android:id="@+id/divider_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/overview_container"
            android:background="@android:color/darker_gray" />
    </RelativeLayout>
</layout>