<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Created by Force Porquillo on 5/15/20 5:16 PM
  ~ Copyright (c) 2020.  All rights reserved.
  ~ Last modified 5/15/20 3:09 PM
  ~
  -->

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/worldwideItemCardView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin_2dp"
    android:layout_marginBottom="@dimen/margin_1dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:padding="@dimen/padding_5dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/worldwide_flag"
            android:layout_width="@dimen/xhdpi_layout"
            android:layout_height="@dimen/xhdpi_layout"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/margin_5dp"
            android:layout_marginStart="@dimen/margin_15dp"
            android:src="@drawable/default_flag" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_3dp"
            android:layout_marginStart="@dimen/margin_10dp"
            android:layout_toEndOf="@id/worldwide_flag"
            tools:ignore="RelativeOverlap">

            <LinearLayout
                android:id="@+id/country_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/countryName"
                    style="@style/countryDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/continent"
                    style="@style/continent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/margin_10dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/cases_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/country_container"
                android:layout_marginTop="@dimen/margin_1dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/countrySubDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/confirmed" />

                <TextView
                    android:id="@+id/cases_number"
                    style="@style/countryNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_2dp"
                    android:textColor="@color/blue"
                    android:textStyle="bold" />

                <TextView
                    style="@style/countrySubDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_3dp"
                    android:text="@string/deaths" />

                <TextView
                    android:id="@+id/deaths_number"
                    style="@style/countryNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_2dp"
                    android:textColor="@color/red"
                    android:textStyle="bold" />

                <TextView
                    style="@style/countrySubDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_3dp"
                    android:text="@string/recovered" />

                <TextView
                    android:id="@+id/recovered_number"
                    style="@style/countryNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_2dp"
                    android:textColor="@color/green"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/cases_container"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/update_text"
                    style="@style/countrySubDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_2dp"
                    android:text="@string/last_updated" />

                <TextView
                    android:id="@+id/last_updated"
                    style="@style/lastUpdated"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_2dp"
                    android:layout_marginTop="@dimen/margin_2dp"
                    android:gravity="center"
                    tools:ignore="SmallSp" />

            </LinearLayout>
        </RelativeLayout>

        <com.like.LikeButton
            android:id="@+id/favorite_icon"
            android:layout_width="@dimen/width_25dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/margin_5dp"
            app:icon_size="20dp"
            app:icon_type="Star"
            app:like_drawable="@drawable/ic_star_solid"
            app:liked="false"
            app:unlike_drawable="@drawable/ic_star"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>